# Literature_Review_Tools

./: .gitignore  Arcas_Literature_Review.ipynb  Combine_Files.ipynb  Generate_Word_Cloud.ipynb  Google_Trends_With_Pytrends.ipynb  LICENSE  README.md  Scholarly_Literature_Review.ipynb  pyproject.toml
notebooks/: Arcas_Literature_Review.ipynb  Generate_Word_Cloud.ipynb  Google_Trends_With_Pytrends.ipynb
src/: openalex.py
